fc-service-server merge